# template-python-docker-image

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/package/: __main__.py  cli.py
