[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "docker-template"
version = "0.1.0"
description = "A docker image template"
requires-python = ">= 3.10"
dependencies = [
    "pandas==2.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "ruff==0.7.2",
]
